Tela de listar as avaliações do pedido || add lib flutter_rating_bar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   cached_network_image: ^2.5.0
   curved_navigation_bar: ^0.3.7
+  flutter_rating_bar: ^3.2.0+1
 
 dev_dependencies:
   flutter_test:
