--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,15 @@ dependencies:
   curved_navigation_bar: ^0.3.7
   flutter_rating_bar: ^3.2.0+1
   dio: ^3.0.10
+  mobx: ^1.2.1+4
+  flutter_mobx: ^1.1.0+2
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    build_runner: ^1.12.1
+    mobx_codegen: ^1.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
