--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   dio: ^3.0.10
   mobx: ^1.2.1+4
   flutter_mobx: ^1.1.0+2
-  cached_network_image: ^2.5.1
+  cached_network_image: ^2.2.0+1
   
 
 dev_dependencies:
