--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.10.2
   mobx_codegen: ^1.1.2
-
+  provider: ^5.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
