--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   mobx: ^1.2.1+4
   flutter_mobx: ^1.1.0+2
   cached_network_image: ^2.2.0+1
+  flutter_secure_storage: ^4.1.0
   
 
 dev_dependencies:
