--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_mobx: ^1.1.0+2
   cached_network_image: ^2.2.0+1
   flutter_secure_storage: ^4.1.0
+  device_info: ^2.0.0
   
 
 dev_dependencies:
