--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cached_network_image: ^2.2.0+1
   flutter_secure_storage: ^4.1.0
   device_info: ^2.0.0
+  fluttertoast: ^8.0.4
   
 
 dev_dependencies:
